--- a/src/routes/products/views/list.twig
+++ b/src/routes/products/views/list.twig
@@ -16,7 +16,7 @@
             <h6 class="card-text">{{ product.description }}</h6>
             <a class="btn btn-primary" href="/products/view/{{ product.id }}" title="View more">
               <button>
-                View More
+                {{buttonViewMore}}
               </button>
             </a>
           </div>
