--- a/src/routes/products/views/list.twig
+++ b/src/routes/products/views/list.twig
@@ -1,12 +1,17 @@
 {% extends "../../../common/views/layout.parent.twig" %}
 
+{% block head %}
+  <title>{{title}}</title>
+  <meta name="description" content="{{desc}}">
+{% endblock %}
+
 {% block content %}
   <ul class="listing">
     {% for product in products %}
       <li>
         <div class="card">
           <figure>
-            <img class="card-img-top" src="/{{ product.image }}" alt="Alt text"/>
+            <img class="card-img-top" src="/{{ product.image }}" alt="{{ product.image }}"/>
             <figcaption>{{ product.name }}</figcaption>
           </figure>
           <div class="card-body">
