--- a/src/common/views/layout.parent.twig
+++ b/src/common/views/layout.parent.twig
@@ -18,7 +18,7 @@
   <section class="container" role="application">
     {% block content %}{% endblock %}
   </section>
-  <div class="text-center" role="footer">
+  <footer role="footer">
     <a href="http://www.chanel.com" class="logo"></a>
-  </div>
+  </footer>
 </body>
