fix(products): fix cards height

--- a/src/routes/products/styles/product.scss
+++ b/src/routes/products/styles/product.scss
@@ -14,4 +14,9 @@
 
 section.container{
     margin-top: 15px;
+    .card-text {
+      height:85px;
+      white-space: unset;
+      overflow:hidden;
+    }
 }
